fix: header-links gap

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 .header-links {
     color: #E5E7EB;
     font-size: 18px;
-    gap: 14px;
+    gap: 20px;
 }
 
 .header-cards {
@@ -145,7 +145,7 @@ body {
 .quote-text {
     width: 700px;
     font-style: italic;
-    font-weight: 200;
+    font-weight: 300;
     font-size: 36px;
     text-align: left;
 }
@@ -193,7 +193,7 @@ body {
 h3.cta-prompt {
     font-size: 24px;
     font-weight: 800;
-    margin: 0-px;
+    margin: 0;
 }
 
 .cta-button {
